2009-02     Paul Murrell <paul@stat.auckland.ac.nz>

	Changed stop() and warning() messages so that they
	use gettextf() rather than paste() so that they are
	more amenable to translation.

	Changed paste("file", "path", sep=".Platform$separator)
	to file.path("file", "path")
	
* makeplots.R: 
	plotFunction(): record date using Sys.time() rather
	than date() so we get an ISO date format.

	notYetImplemented(): added 'feature' argument so that
	the message can be more informative.
	
* graphicsQC-package.Rd:
	Removed package metadata.

2008-11     Paul Murrell <paul@stat.auckland.ac.nz>

* makeplots.R: 
	(): Changed how "call" is calculated 
	(plotExpr): Changed meaning of default value of 'filetype';  
		default is still NULL, but now that means produce 
		ALL available formats
	
* compare.R: 
	(): Changed how "call" is calculated 

* report.R:
	(writeReport): Added 'browse' arg so automatically opens browser.
	
2007-11-10  Stephen Gardiner  <sgar060@aucklanduni.ac.nz>

* DESCRIPTION: Changed the name of the package to ``graphicsQC''.

* tests.R
	(): Replaced ``graphicsqc'' with ``graphicsQC''.

* graphicsqc-package.Rd: Renamed to graphicsQC-package.Rd

2007-10-31  Stephen Gardiner  <sgar060@aucklanduni.ac.nz>

* report.Rnw: Updated. Includes bullet points and some content written.

2007-10-30  Stephen Gardiner  <sgar060@aucklanduni.ac.nz>

* makeplots.R, compare.R, report.R, log.R
	(): All function names have been backquoted and laid out similar to what
		dump would do. Many of the comments have also been tidied.

* makeplots.R
	(): Changed from stop() when length(prefix) > 1 to warning().
	(evalPlotCode): Strips trailing \n from warnings and errors (so XML will
		read properly). Note: writing/reading using CData also won't read the
		last \n's.
	(plotFile): Re-ordered arguments so path comes before prefix because prefix
		normally has sensible defaults.
	(plotFunction): Likewise.
	(plotExpr): Likewise (except prefix has to be chosen by the user).

* tests.R