@@ -1,3 +1,9 @@
+2009-03    Paul Murrell <paul@stat.auckland.ac.nz>
+
+* compare.R:
+	gqcShell():  new function to provide cross-platform system() calls.
+	
+	
 2009-02     Paul Murrell <paul@stat.auckland.ac.nz>
 
 	Changed stop() and warning() messages so that they
